@@ -67,10 +67,11 @@ GMOFILES = @GMOFILES@
 UPDATEPOFILES = @UPDATEPOFILES@
 DUMMYPOFILES = @DUMMYPOFILES@
 DISTFILES.common = Makefile.in.in remove-potcdate.sin \
-$(DISTFILES.common.extra1) $(DISTFILES.common.extra2) $(DISTFILES.common.extra3)
+$(DISTFILES.common.extra1) $(DISTFILES.common.extra2) \
+$(DISTFILES.common.extra3) $(DISTFILES.common.extra4)
 DISTFILES = $(DISTFILES.common) Makevars POTFILES.in POTFILES-shell.in \
 $(POFILES) $(GMOFILES) \
-$(DISTFILES.extra1) $(DISTFILES.extra2) $(DISTFILES.extra3) grub.d.sed README
+$(DISTFILES.extra1) $(DISTFILES.extra2) $(DISTFILES.extra3) $(DISTFILES.extra4) grub.d.sed README
 
 POTFILES = \
 
